--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,238 @@
-/* Compile your LESS file! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  height: 100%;
+  background-color: black;
+  font-size: 62.5%;
+}
+.container-all {
+  background-color: white;
+  order: 5;
+  max-width: 1000px;
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  line-height: 1.25;
+  padding: 20px;
+}
+.container-all span {
+  font-weight: bold;
+}
+.container-all h2 {
+  font-size: 1.8rem;
+  text-decoration: underline;
+}
+.container-all div.summary-top-img {
+  height: 150px;
+  width: 100%;
+  background: grey;
+  font-size: 2rem;
+}
+.container-all div {
+  padding: 20px;
+}
+.container-all section {
+  padding: 20 0px;
+}
+.container-all .box {
+  font-size: 1.5rem;
+}
+.container-all div.body-top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px dashed black;
+}
+.container-all .work-history-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container-all .work-history-left,
+.container-all .work-history-center,
+.container-all .work-history-right {
+  height: 450px;
+  width: 31%;
+}
+.container-all div.work-history-top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px dashed black;
+}
+.container-all div.skills-add-info {
+  border-top: 1px dashed black;
+}
+.container-all div.skills-add-info h2 {
+  font-size: 1.6rem;
+}
+.container-all div.skills-add-info ul {
+  padding-left: 30px;
+  display: grid;
+  grid-template-columns: auto 100px 1fr;
+}
+.container-all footer {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  border-top: 1px dashed black;
+}
+.container-all .footer-right,
+.container-all .footer-left {
+  width: 48%;
+  font-size: 1.5rem;
+}
+.header-all .header-top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  font-weight: bold;
+  padding: 3%;
+  border-bottom: 5px double black;
+}
+.header-all .header-bottom {
+  font-size: 1.6rem;
+  border-bottom: 5px double black;
+}
+.header-all .header-bottom .header-nav {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.header-all .header-bottom .header-nav a {
+  font-color: black;
+  font-weight: bold;
+  text-decoration: none;
+}
